Fix top nav flicker

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -39,7 +39,7 @@ html {
 }
 
 body {
-    padding-top: 70px;
+    padding-top: 51px;
     background: $xtatik-footer-bg;
 }
 
